add more cards and link to older news.

--- a/code/index.html
+++ b/code/index.html
@@ -49,34 +49,53 @@
       <section class="news-feed">
         <h2>Latest news..</h2>
         <!-- The other news content -->
-      <div class="news-feed--cards"> 
-        <div class="news-feed--card">
-            <img class="news-feed--img" src="./images/cat.jpg" alt="cat with green background"/>
-            <span class="date-item">20 JAN, 2022</span>
-            <h3>Nisse is missing</h3>
-            <p>Nisse hasn´t been seen since Sunday, which is very unlike him. Let Barbro know if you see Nisse. </p>
-        </div>
+        <div class="news-feed--cards"> 
+          <div class="news-feed--card">
+              <img class="news-feed--img" src="./images/cat.jpg" alt="cat with green background"/>
+              <span class="date-item">20 JAN, 2022</span>
+              <h3>Nisse is missing</h3>
+              <p>Nisse hasn´t been seen since Sunday, which is very unlike him. Let Barbro know if you see Nisse. </p>
+          </div>
 
-        <div class="news-feed--card">
-            <img class="news-feed--img" src="./images/car.jpg" alt="old car"/>
-            <span class="date-item">20 JAN, 2022</span>
-            <h3>Tips to reduce environmental impact</h3>
-            <p>Anonymous neighbours wonder if Sören really needed to use his car so often? We must think of the environment and our generations to come.</p>
-        </div>
+          <div class="news-feed--card">
+              <img class="news-feed--img" src="./images/car.jpg" alt="old car"/>
+              <span class="date-item">20 JAN, 2022</span>
+              <h3>Tips to reduce environmental impact</h3>
+              <p>Anonymous neighbours wonder if Sören really needed to use his car so often? We must think of the environment and our generations to come.</p>
+          </div>
 
-        <div class="news-feed--card">
-            <img class="news-feed--img" src="./images/crossword.jpg" alt="crosswords"/>
-            <span class="date-item">19 JAN, 2022</span>
-            <h3>Congratulations Hildur!</h3>
-            <p>Hildur won last weeks cross word competition.</p>
-        </div>
+          <div class="news-feed--card">
+              <img class="news-feed--img" src="./images/crossword.jpg" alt="crosswords"/>
+              <span class="date-item">19 JAN, 2022</span>
+              <h3>Congratulations Hildur!</h3>
+              <p>Hildur won last weeks cross word competition.</p>
+          </div>
 
-        <div class="news-feed--card">
-            <img class="news-feed--img" src="./images/knitting.jpg" alt="knitting"/>
-            <span class="date-item">18 JAN, 2022</span>
-            <h3>NAP event - knitting</h3>
-            <p>National Association of Pensioners (NAP) is having their monthly knitting gathering next week. Call Ali on 3rd floor or Gun on 2nd floor if you want to join.</p>
-        </div>
+          <div class="news-feed--card">
+              <img class="news-feed--img" src="./images/knitting.jpg" alt="knitting"/>
+              <span class="date-item">18 JAN, 2022</span>
+              <h3>NAP event - knitting</h3>
+              <p>National Association of Pensioners (NAP) is having their monthly knitting gathering next week. Call Ali on 3rd floor or Gun on 2nd floor if you want to join.</p>
+          </div>
+
+          <div class="news-feed--card">
+            <img class="news-feed--img" src="./images/fika.jpg" alt="swedish fika with cinnamon roll"/>
+            <span class="date-item">17 JAN, 2022</span>
+            <h3>FIKA!</h3>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+          </div>
+
+          <div class="news-feed--card">
+            <img class="news-feed--img" src="./images/computer.jpg" alt="computer"/>
+            <span class="date-item">16 JAN, 2022</span>
+            <h3>Computer Course</h3>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nostrum, incidunt!</p>
+          </div>
+
+          <div class="news-feed--card">
+            <h3>Older news can be found here..</h3>
+          </div>
+
       </div>  
       </section>
     </main>
