--- a/code/index.html
+++ b/code/index.html
@@ -9,18 +9,24 @@
   </head>
   <body>
     <header>
-     <h1>title</h1>
      <image class="logo-img" src= "images/logo-travel.jpg"></image>
      <nav>
-       <a href=""
+      <div class="topnav">
+        <a class="active" href="#home">Home</a>
+        <a href="#news">News</a>
+        <a href="#contact">Contact</a>
+        <a href="#about">About</a>
+      </div>
      </nav>
      
       <!-- Some kind of logo and navbar -->
     
     </header>
 
+    <article>
     <section class="big-news">
-      <image class="hot-air-balloons" src="images/tony-lee-i-unsplash.jpg"></image>
+     <image class="hot-air-balloons" src="images/tony-lee-i-unsplash.jpg"></image>
+     <div><h1>The best adventures for 2022</h1></div>
       <!-- The big news content -->
     </section>
 
@@ -30,6 +36,8 @@
       <div class="news-2"></div>
       <div class="news-3"></div>
       <div class="news-4"></div>
+
+    </article>  
 
 
       <!-- The other news  -->
