update, still not tere by far

--- a/code/index.html
+++ b/code/index.html
@@ -18,7 +18,7 @@
 
 
     <header>
-      <div class="logo"><p class="logo-text">we<br>love<br>space</p></div>
+      <div class="logo"><p class="logo-text">Give<br>Us<br>Space</p></div>
       <h1 class="head-site">DAILY SPACE - Kids Edition</h1>
       <!-- <h2 class="head-site">Kids Edition</h2> -->
       <nav class="nav-bar">
@@ -31,8 +31,11 @@
 
 
     <section class="big-news-container">
-      <div class="title-text">We live in<br> a Galaxy</div>
-       <img class="big-image" src="images/universe.jpg" alt= picture of a galaxy/>
+      <div class="title-text">
+         <h3>We live in a</h3>
+          <h4>Galaxy</h4>
+      </div>
+       <img class="big-image" src="images/kid-universe.jpg" alt= picture of a galaxy/>
       <!-- The big news content -->
     </section>
 
@@ -40,19 +43,32 @@
     <section class="small-news-container">
       <div class="news1">
         <img class="small-img" src="images/universe.jpg"/>
-         <span>What is a shooting star</span>
+         <p class="small-title">What is a shooting star</p>
       </div>
       <div class="news2">
         <a href="https://www.highlightskids.com/explore/science-questions/what-are-the-northern-lights" target="_blank"><img class="small-img" src="images/northern-lights.jpg"/></a>
-         <span>What is a shooting star</span>
+        <p class="small-title">What is a shooting star</p>
       </div>
       <div class="news3">
         <img class="small-img" src="images/shooting-star.jpg"/>
-         <span>What is a shooting star</span>
-      </div> 
+        <p class="small-title">What is a shooting star</p>
+      </div>
+      <div class="news4">
+        <img class="small-img" src="images/grogu.jpg"/>
+           <p class="small-title">Grogu tells all</p></div>
+      
+      <div class="news5">
+        <img class="small-img" src="images/mars.jpg"/>
+        <p class="small-title">What is a shooting star</p>
+      </div>
+       <div class="news6">
+            <div><p class="small-title">What is a shooting star</p></div>
+      
     </section>
 
-    <section class="small-news-container">
+  
+
+    <!-- <section class="small-news-container">
       <div class="news4">
         <span>What is a shooting star</span>
       </div>
@@ -61,7 +77,7 @@
       </div>
       <div class="news6">
         <span>What is a shooting star</span>
-      </div>
+      </div> -->
       <!-- The other news  -->
     </section>
   </body>
