new update looks better but not responsive yet

--- a/code/index.html
+++ b/code/index.html
@@ -8,6 +8,11 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Righteous&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Montserrat+Alternates:wght@400;600&family=Prata&family=Righteous&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- dont forget the meta tag for responsiveness -->
@@ -19,12 +24,12 @@
 
     <header>
       <div class="logo"><p class="logo-text">Give<br>Us<br>Space</p></div>
-      <h1 class="head-site">DAILY SPACE - Kids Edition</h1>
+      <h1 class="head-site">DAILY SPACE<div class="kids-ed"><em>Kids Edition</em></div></h1>
       <!-- <h2 class="head-site">Kids Edition</h2> -->
       <nav class="nav-bar">
-        <a href="https://www.nasa.gov/" target="_blank">NASA</a>
-        <a href="https://www.nasa.gov/nasalive" target="_blank">NASA Live</a>
-        <a href="https://www.nasa.gov/kidsclub/index.html" target="_blank">NASA Kids Club</a>
+        <a class="nav-links" href="https://www.nasa.gov/" target="_blank">NASA</a>
+        <a class="nav-links" href="https://www.nasa.gov/nasalive" target="_blank">NASA Live</a>
+        <a class="nav-links" href="https://www.nasa.gov/kidsclub/index.html" target="_blank">NASA Kids Club</a>
       </nav>
       <!-- Some kind of logo and navbar -->
     </header>
@@ -32,8 +37,8 @@
 
     <section class="big-news-container">
       <div class="title-text">
-         <h3>We live in a</h3>
-          <h4>Galaxy</h4>
+         <h3>We live in a Galaxy</h3>
+          <!-- <h4>Galaxy</h4> -->
       </div>
        <img class="big-image" src="images/kid-universe.jpg" alt= picture of a galaxy/>
       <!-- The big news content -->
@@ -43,11 +48,12 @@
     <section class="small-news-container">
       <div class="news1">
         <img class="small-img" src="images/universe.jpg"/>
-         <p class="small-title">What is a shooting star</p>
+         <p class="small-title">How is this even possible?</p>
       </div>
       <div class="news2">
-        <a href="https://www.highlightskids.com/explore/science-questions/what-are-the-northern-lights" target="_blank"><img class="small-img" src="images/northern-lights.jpg"/></a>
-        <p class="small-title">What is a shooting star</p>
+        <!-- <a href="https://www.highlightskids.com/explore/science-questions/what-are-the-northern-lights" target="_blank"><img class="small-img" src="images/northern-lights.jpg"/></a> -->
+        <img class="small-img" src="images/northern-lights.jpg"/>
+        <p class="small-title">Northern lights lit up Stockholm City</p>
       </div>
       <div class="news3">
         <img class="small-img" src="images/shooting-star.jpg"/>
@@ -59,10 +65,11 @@
       
       <div class="news5">
         <img class="small-img" src="images/mars.jpg"/>
-        <p class="small-title">What is a shooting star</p>
+        <p class="small-title">Can we live on Mars?</p>
       </div>
        <div class="news6">
-            <div><p class="small-title">What is a shooting star</p></div>
+          <img class="small-img" src="images/iss.jpg"/>  
+            <p class="small-title">They live on ISS</p>
       
     </section>
 
