--- a/code/news_site_2/index.html
+++ b/code/news_site_2/index.html
@@ -20,8 +20,8 @@
 
   <!-- Navbar -->
   <nav class="navbar">
-    <a href="../index.html" alt=""><i class="fas fa-circle fa-2x brand-logo"></i></a>
-    <a href="../index.html" alt="">
+    <a href="../index.html" target="_blank" alt="News Site 1"><i class="fas fa-circle fa-2x brand-logo"></i></a>
+    <a href="../index.html" target="_blank" alt="News Site 1">
       <h1><span class="brand-1">Unremarkable</span><span class="brand-2">News</span></h1>
     </a>
     <a href="" alt="" class="navbar-link-1">Nothing Noteworthy</a>
@@ -58,7 +58,6 @@
       </div>
     </article>
 
-
     <!-- Remaining Articles -->
     <article class="article">
       <div class="top-right-corner-border">
@@ -74,8 +73,6 @@
       </div>
     </article>
 
-
-
     <article class="article">
       <div class="top-left-corner-border">
         <div class="bottom-right-corner-border">
@@ -90,8 +87,6 @@
       </div>
     </article>
 
-
-
     <article class="article">
       <div class="top-right-corner-border">
         <div class="bottom-left-corner-border">
@@ -104,8 +99,6 @@
           </footer>
         </div>
     </article>
-
-
 
     <article class="article">
       <div class="top-left-corner-border">
@@ -135,8 +128,6 @@
       </div>
     </article>
 
-
-
     <article class="article">
       <div class="top-left-corner-border">
         <div class="bottom-right-corner-border">
@@ -151,8 +142,6 @@
       </div>
     </article>
 
-
-
     <article class="article">
       <div class="top-right-corner-border">
         <div class="bottom-left-corner-border">
@@ -165,8 +154,6 @@
           </footer>
         </div>
     </article>
-
-
 
     <article class="article">
       <div class="top-left-corner-border">
