addded the last html and css

--- a/code/index.html
+++ b/code/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
-
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Travel News</title>
   <link rel="stylesheet" href="./style.css" />
-
 </head>
+
+<style>A {text-decoration: none;} </style>
 
 <body>
 
@@ -22,117 +22,108 @@
     <h1 class="headertext">Travel News</h1>
     <nav>
       <ul>
-        <a href="https://www.thesitemagazine.com/thesitemagazine" target="_blank">ABOUT</a>
-        <a href="https://www.thesitemagazine.com/thesitemagazine" target="_blank">READ</a>
-      </ul>
       
+        <p class="hover-underline-animation"><a href="https://www.thesitemagazine.com/thesitemagazine">ABOUT</a></p>
+        <p class="hover-underline-animation"><a href="https://www.thesitemagazine.com/thesitemagazine">READ</a></p>
+      </ul>
       <ul>
-        <a href="https://www.thesitemagazine.com/thesitemagazine" target="_blank">WRITE</a>
-        <a href="https://www.thesitemagazine.com/thesitemagazine" target="_blank">BUY</a>
+        <p class="hover-underline-animation"><a href="https://www.thesitemagazine.com/thesitemagazine">WRITE</a></p>
+        <p class="hover-underline-animation"><a href="https://www.thesitemagazine.com/thesitemagazine">BUY</a></p>
+
+
+       <ul>
       </ul>
     </nav>
   </header>
-
 
   <!-- The big news  -->
 
   <div class="Newsbox1">
     <div class="child1">
-      <img class="image1"src="https://images.pexels.com/photos/3935702/pexels-photo-3935702.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"alt="image1" />
+      <img class="image1" src="Map.jpeg" alt="Map">
     </div>
-
     <div class="child2">
       <p class="text">Tourism is travelling for pleasure or to enjoy yourself away from the place you live. People do
         this for many different reasons – to have fun, visit other countries and learn about other cultures or just
-        relax from
-        stressful working life. Tourists go to various destinations, countries with great landmarks, places with lovely
+        relax from stressful working life. Tourists go to various destinations, countries with great landmarks, places with lovely
         beaches or simply areas of wilderness and untouched nature. In the last few decades tourism has grown very much,
         mostly because people’s lifestyles have changed. Tourists go to various destinations.
        </p>
     </div>
-
   </div>
 
   <!-- The other news  -->
 
-  <div class="flex-parent2">
+  <div class="Newsbox2">
 
-    <div class="flex-child 3"> <a href="https://www.thesitemagazine.com/call-for-submissions">
+    <div class="flex-child 3"> 
+      <a href="https://www.thesitemagazine.com/call-for-submissions">
       <figure class="polaroid">
-        <img class="image"
-          src="https://images.pexels.com/photos/8759823/pexels-photo-8759823.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500"
-          alt="image2">
-        <div class="date">Jan 15 2022</div>
-        <div class="footer-text"> Studio Gang's "Actionable Idealism"</div>
+        <img class="image" src="girls.webp" alt="girld">
+    <div class="date">Jan 15 2022</div>
+    <div class="footer-text"> Studio Gang's "Actionable Idealism"</div>
       </a>
-    </figure>
+      </figure>
+  </div>
+
+    <div class="flex-child 4">
+      <a href="https://www.thesitemagazine.com/call-for-submissions">
+      <figure class="polaroid">
+        <img class="image" src="sand.jpeg" alt="sand">
+    <div class="date">Jan 13 2022</div>
+    <div class="footer-text"> Black Healing in the Digital Space</div>
+      </a>
+      </figure>
     </div>
 
-    <div class="flex-child 4"><a href="https://www.thesitemagazine.com/call-for-submissions">
+    <div class="flex-child 5">
+      <a href="https://www.thesitemagazine.com/call-for-submissions">
       <figure class="polaroid">
-        <img class="image"
-          src="https://images.pexels.com/photos/1935854/pexels-photo-1935854.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
-          alt="image3">
-        <div class="date">Jan 13 2022</div>
-        <div class="footer-text"> Black Healing in the Digital Space</div>
+        <img class="image" src="harbour.jpeg" alt="harbour">
+    <div class="date">Jan 12 2022</div>
+    <div class="footer-text"> Between Form and Formlessness</div>
       </a>
-    </figure>
+      </figure>
     </div>
 
-    <div class="flex-child 5"><a href="https://www.thesitemagazine.com/call-for-submissions">
+    <div class="flex-child 6">
+      <a href="https://www.thesitemagazine.com/call-for-submissions">
       <figure class="polaroid">
-        <img class="image"
-          src="https://images.pexels.com/photos/746755/pexels-photo-746755.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500"
-          alt="image4">
-        <div class="date">Jan 12 2022</div>
-        <div class="footer-text"> Between Form and Formlessness</div>
-      </a>
-    </figure>
+        <img class="image" src="man.webp" alt="man" />
+      <div class="date">Jan 10 2022</div>
+      <div class="footer-text">Umwelten: The Animal People</div>
+        </a>
+        </figure>
     </div>
 
-    <div class="flex-child 6"><a href="https://www.thesitemagazine.com/call-for-submissions">
-      <figure class="polaroid">
-        <img class="image"
-          src="https://images.pexels.com/photos/1062420/pexels-photo-1062420.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
-          alt="image5" />
-        <div class="date">Jan 10 2022</div>
-        <div class="footer-text">Umwelten: The Animal People</div>
-      </a>
-    </figure>
-    </div>
-
-    <div class="flex-child 7"><a href="https://www.thesitemagazine.com/call-for-submissions">
-      <figure class="polaroid">
-         <img class="image"
-          src="https://images.pexels.com/photos/587839/pexels-photo-587839.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
-          alt="image6" />
+    <div class="flex-child 7">
+      <a href="https://www.thesitemagazine.com/call-for-submissions">
+      <figure class="polaroid"> <img class="image" src="paris.jpeg" alt="paris" />
         <div class="date">Jan 8 2022</div>
         <div class="footer-text">Drawing Non-Conforming </div>
       </a>
-    </figure>
+      </figure>
     </div>
 
-    <div class="flex-child 8"><a href="https://www.thesitemagazine.com/call-for-submissions">
+    <div class="flex-child 8">
+      <a href="https://www.thesitemagazine.com/call-for-submissions">
       <figure class="polaroid">
-        <img class="image"
-          src="https://images.pexels.com/photos/705774/pexels-photo-705774.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
-          alt="bike" />
-        <div class="date">Jan 5 2022</div>
-        <div class="footer-text">Memorials</div>
+        <img class="image" src="city.jpeg"alt="city" />
+    <div class="date">Jan 5 2022</div>
+    <div class="footer-text">Memorials</div>
       </a>
-    </figure>
+      </figure>
     </div>
 
 
-    <div class="flex-child 9"><a href="https://www.thesitemagazine.com/call-for-submissions">
-        <figure class="polaroid">
-        <img class="image"
-          src="https://images.pexels.com/photos/2376789/pexels-photo-2376789.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500"
-          alt="House" />
-        <div class="date">Jan 3 2022</div>
-        <div class="footer-text">Between Form and Formlessness</div>
+    <div class="flex-child 9">
+      <a href="https://www.thesitemagazine.com/call-for-submissions">
+      <figure class="polaroid">
+        <img class="image" src="fort.jpeg" alt="Fort" />
+    <div class="date">Jan 3 2022</div>
+    <div class="footer-text">Between Form and Formlessness</div>
       </a>
-    </figure>
+      </figure>
     </div>
   
 
