styled h1, big news-img

--- a/code/index.html
+++ b/code/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project 2: The News Site</title>
     <link rel="stylesheet" href="./style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Cinzel&display=swap" rel="stylesheet">
+
+
     <!-- dont forget the meta tag for responsiveness -->
   </head>
   <body>
@@ -25,8 +30,9 @@
 
     <article>
     <section class="big-news">
-     <image class="hot-air-balloons" src="images/tony-lee-i-unsplash.jpg"></image>
-     <div><h1>The best adventures for 2022</h1></div>
+     <h1 style = font-size: 50px>The best adventures for 2022</h1>
+     <image class="big-news-img" src="images/tony-lee-i-unsplash.jpg"></image>
+     
       <!-- The big news content -->
     </section>
 
