restart with css grid instead of flexbox. Created main-news grid and other-news grid

--- a/code/index.html
+++ b/code/index.html
@@ -2,15 +2,15 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <!-- dont forget the meta tag for responsiveness -->
+    <!-- meta tag for responsiveness -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Project 2: The News Site</title>
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <header>
-      <!-- Some kind of logo and navbar -->
-      <div class="logo">
+      <!-- Logo and navbar -->
+       <div class="logo">
         <img src="https://i.pinimg.com/originals/6e/de/a8/6edea84dffc69d2c190c427be484143c.png" alt="raspberry-logo">
       </div>
       <nav class="nav-links">
@@ -21,37 +21,41 @@
       </nav>
     </header>
 
-    <section class="container-big-news">
-      <!-- The big news content -->
-      <div class="headline-article">
-        <img class="headline-image" src="https://www.haifa-group.com/sites/default/files/field/image/Raspberry%20Mobile%20banner.png" alt="raspberry">
-     
-        <h1 class="headline">This is a big deal of newsy stuff! </h1>
-        <p class="headline-text">
-          Here is a bit of article text. Blah blah blah. More and more text. And even more text. I wonder how much filler text I can keep you interested in. Why are you still reading this?</p>
+    <!-- The big-news content -->
+    <section class="big-news">
+      <img class="headline-img" 
+           src="https://www.haifa-group.com/sites/default/files/field/image/Raspberry%20Mobile%20banner.png">
+      <div class="headline-content">
+        <h1> Very. big. News.</h1>
+        <p>Lot's and lot's of text about the very big news.</p>
+      </div>
+    </section>
+      
+    <!-- The other-news  -->
+    <section class="other-news">
+      <div class="article">
+        <img src="https://www.haifa-group.com/sites/default/files/field/image/Raspberry%20Mobile%20banner.png">
+        <h3>Article title.</h3>
+        <p>Filler text about whaterever this article is about. Blah blah blah very interesting.</p>
+      </div>
+      <div class="article">
+        <img src="https://www.haifa-group.com/sites/default/files/field/image/Raspberry%20Mobile%20banner.png">
+        <h3>Another article title.</h3>
+        <p>Filler text about whaterever this article is about. Blah blah blah very interesting.</p>
+      </div>
+      <div class="article">
+        <img src="https://www.haifa-group.com/sites/default/files/field/image/Raspberry%20Mobile%20banner.png">
+        <h3>Article title.</h3>
+        <p>Filler text about whaterever this article is about. Blah blah blah very interesting.</p>
+      </div>
+            <div class="article">
+        <img src="https://www.haifa-group.com/sites/default/files/field/image/Raspberry%20Mobile%20banner.png">
+        <h3>Another article title.</h3>
+        <p>Filler text about whaterever this article is about. Blah blah blah very interesting.</p>
       </div>
     </section>
 
-    <section class="container-article">
-      <!-- The other news  -->
-      <div class="article">
-        <h2>This is slightly less interesting article 2</h2>
-        <p>Here is a bit of article text. Blah blah blah.</p>
-      </div>
-      <div class="article">
-        <h2>This is slightly less interesting article 3</h2>
-        <p>Here is a bit of article text. Blah blah blah.</p>
-      </div>
-      <div class="article">
-        <h2>This is slightly less interesting article 4</h2>
-        <p>Here is a bit of article text. Blah blah blah.</p>
-      </div>
-      <div class="article">
-        <h2>This is slightly less interesting article 5</h2>
-        <p>Here is a bit of article text. Blah blah blah.</p>
-      </div>
-    </section>
-
+    <!-- End with a footer  -->
     <footer>
       <p>Created by Arianna Allahyar.</p>
     </footer>
