thursday session done

--- a/code/index.html
+++ b/code/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
 
+<!-- Write your comments here -->
+
   <body>
     <header>
       <nav>
@@ -54,42 +56,39 @@
         >
 
         <div class="row">
-          <div
-            class="article yellow"
-            style="background-color: rgb(196, 186, 56)"
-          >
-            <h4>The Balancing Act Of Fashion Business</h4>
+          <div class="article yellow">
+            <h4>The ideal female archetype</h4>
             <a href="LÄNKSIDAN">
               <div class="article-image-wrapper">
                 <img
-                  src="./images/mainak-bose-lg42DbJEd3U-unsplash.jpg"
+                  src="./images/sergey-vinogradov-wXrXdt2_YGs-unsplash.jpg"
                   class="article-image"
-                  alt=""
+                  alt="profile image"
                 />
               </div>
             </a>
             <p>BY ÅSA SIEURIN</p>
           </div>
 
-          <div class="article blue" style="background-color: #65798e">
-            <h4>The Balancing Act Of Fashion Business</h4>
+          <div class="article blue">
+            <h4>Invisible shapes</h4>
             <div class="article-image-wrapper">
               <img
-                src="./images/mainak-bose-lg42DbJEd3U-unsplash.jpg"
+                src="./images/sergey-vinogradov-M2Cxa3USgW8-unsplash.jpg"
                 class="article-image"
-                alt=""
+                alt="red man"
               />
             </div>
             <p>BY ÅSA SIEURIN</p>
           </div>
 
-          <div class="article plum" style="background-color: #5a4041">
+          <div class="article plum">
             <h4>The Balancing Act Of Fashion Business</h4>
             <div class="article-image-wrapper">
               <img
-                src="./images/mainak-bose-lg42DbJEd3U-unsplash.jpg"
+                src="./images/sergey-vinogradov-Jt6Mof2cLR0-unsplash.jpg"
                 class="article-image"
-                alt=""
+                alt="man on a rock"
               />
             </div>
             <p>BY ÅSA SIEURIN</p>
@@ -110,44 +109,40 @@
       <section class="articles-container">
         <p class="article-header">Articles on the topic of:</p>
         <a class="article-header article-link" href="LÄNKSIDAN!"
-          >Creative Processes</a
-        >
+          >Creative Processes</a>
 
         <div class="row">
-          <div
-            class="article yellow"
-            style="background-color: rgb(196, 186, 56)"
-          >
-            <h4>The Balancing Act Of Fashion Business</h4>
+          <div class="article darkgreen">
+            <h4>Embodying the fashion pose</h4>
             <div class="article-image-wrapper">
               <img
-                src="./images/mainak-bose-lg42DbJEd3U-unsplash.jpg"
+                src="./images/sergey-vinogradov-TI-eDUB8P7U-unsplash.jpg"
                 class="article-image"
-                alt=""
+                alt="sunset"
               />
             </div>
             <p>BY ÅSA SIEURIN</p>
           </div>
 
           <div class="article blue" style="background-color: #65798e">
-            <h4>The Balancing Act Of Fashion Business</h4>
+            <h4>Not just a pretty face</h4>
             <div class="article-image-wrapper">
               <img
-                src="./images/mainak-bose-lg42DbJEd3U-unsplash.jpg"
+                src="./images/sergey-vinogradov-ggsVIL5e9IA-unsplash.jpg"
                 class="article-image"
-                alt=""
+                alt="flower girl"
               />
             </div>
             <p>BY ÅSA SIEURIN</p>
           </div>
 
-          <div class="article plum" style="background-color: #5a4041">
-            <h4>The Balancing Act Of Fashion Business</h4>
+          <div class="article beige">
+            <h4>The act of covering</h4>
             <div class="article-image-wrapper">
               <img
-                src="./images/mainak-bose-lg42DbJEd3U-unsplash.jpg"
+                src="./images/sergey-vinogradov-s6pwJEecDUI-unsplash.jpg"
                 class="article-image"
-                alt=""
+                alt="hidden man and a rose"
               />
             </div>
             <p>BY ÅSA SIEURIN</p>
