Further work on Other News section

--- a/code/index.html
+++ b/code/index.html
@@ -33,9 +33,100 @@
         </div>
       </div>
     </section>
-
-    <section class="">
+    <section>
       <!-- The other news  -->
+      <div class="other-news">
+        <div class="article-box">
+          <div class="news-article">
+            <div class="other-image">
+              <img class="other-news-image" src="https://images.unsplash.com/photo-1469334031218-e382a71b716b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80" alt="Woman in control of her finances">
+            </div>
+            <div class="article-text">
+              <h2>Feeling overwhelmed with where to start?</h2>
+              <h4>What if I told you that answering 6 questions could unlock your FREE, personalized financial game plan?</h4>
+              <p>Take my quiz and discover your Money Personality along with a roadmap to level up your financial success and crush all your goals. You'll receive a list of hand-picked resources delivered directly to your inbox.</p>
+            </div>
+          </div>
+          <div class="news-article">
+            <div class="other-image">
+              <img class="other-news-image" src="https://images.unsplash.com/photo-1469334031218-e382a71b716b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80" alt="Woman in control of her finances">
+            </div>
+            <div class="article-text">
+              <h2>Feeling overwhelmed with where to start?</h2>
+              <h4>What if I told you that answering 6 questions could unlock your FREE, personalized financial game plan?</h4>
+              <p>Take my quiz and discover your Money Personality along with a roadmap to level up your financial success and crush all your goals. You'll receive a list of hand-picked resources delivered directly to your inbox.</p>
+            </div>
+          </div>
+        </div>
+        <div class="article-box">
+          <div class="news-article">
+            <div class="other-image">
+              <img class="other-news-image" src="https://images.unsplash.com/photo-1469334031218-e382a71b716b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80" alt="Woman in control of her finances">
+            </div>
+            <div class="article-text">
+              <h2>Feeling overwhelmed with where to start?</h2>
+              <h4>What if I told you that answering 6 questions could unlock your FREE, personalized financial game plan?</h4>
+              <p>Take my quiz and discover your Money Personality along with a roadmap to level up your financial success and crush all your goals. You'll receive a list of hand-picked resources delivered directly to your inbox.</p>
+            </div>
+          </div>
+          <div class="news-article">
+            <div class="other-image">
+              <img class="other-news-image" src="https://images.unsplash.com/photo-1469334031218-e382a71b716b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80" alt="Woman in control of her finances">
+            </div>
+            <div class="article-text">
+              <h2>Feeling overwhelmed with where to start?</h2>
+              <h4>What if I told you that answering 6 questions could unlock your FREE, personalized financial game plan?</h4>
+              <p>Take my quiz and discover your Money Personality along with a roadmap to level up your financial success and crush all your goals. You'll receive a list of hand-picked resources delivered directly to your inbox.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="other-news">
+        <div class="article-box">
+          <div class="news-article">
+            <div class="other-image">
+              <img class="other-news-image" src="https://images.unsplash.com/photo-1469334031218-e382a71b716b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80" alt="Woman in control of her finances">
+            </div>
+            <div class="article-text">
+              <h2>Feeling overwhelmed with where to start?</h2>
+              <h4>What if I told you that answering 6 questions could unlock your FREE, personalized financial game plan?</h4>
+              <p>Take my quiz and discover your Money Personality along with a roadmap to level up your financial success and crush all your goals. You'll receive a list of hand-picked resources delivered directly to your inbox.</p>
+            </div>
+          </div>
+          <div class="news-article">
+            <div class="other-image">
+              <img class="other-news-image" src="https://images.unsplash.com/photo-1469334031218-e382a71b716b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80" alt="Woman in control of her finances">
+            </div>
+            <div class="article-text">
+              <h2>Feeling overwhelmed with where to start?</h2>
+              <h4>What if I told you that answering 6 questions could unlock your FREE, personalized financial game plan?</h4>
+              <p>Take my quiz and discover your Money Personality along with a roadmap to level up your financial success and crush all your goals. You'll receive a list of hand-picked resources delivered directly to your inbox.</p>
+            </div>
+          </div>
+        </div>
+        <div class="article-box">
+          <div class="news-article">
+            <div class="other-image">
+              <img class="other-news-image" src="https://images.unsplash.com/photo-1469334031218-e382a71b716b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80" alt="Woman in control of her finances">
+            </div>
+            <div class="article-text">
+              <h2>Feeling overwhelmed with where to start?</h2>
+              <h4>What if I told you that answering 6 questions could unlock your FREE, personalized financial game plan?</h4>
+              <p>Take my quiz and discover your Money Personality along with a roadmap to level up your financial success and crush all your goals. You'll receive a list of hand-picked resources delivered directly to your inbox.</p>
+            </div>
+          </div>
+          <div class="news-article">
+            <div class="other-image">
+              <img class="other-news-image" src="https://images.unsplash.com/photo-1469334031218-e382a71b716b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80" alt="Woman in control of her finances">
+            </div>
+            <div class="article-text">
+              <h2>Feeling overwhelmed with where to start?</h2>
+              <h4>What if I told you that answering 6 questions could unlock your FREE, personalized financial game plan?</h4>
+              <p>Take my quiz and discover your Money Personality along with a roadmap to level up your financial success and crush all your goals. You'll receive a list of hand-picked resources delivered directly to your inbox.</p>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
   </body>
 </html>
