--- a/code/index.html
+++ b/code/index.html
@@ -1,22 +1,46 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <title>Project 2: The News Site</title>
-    <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
-  </head>
-  <body>
-    <header>
-      <!-- Some kind of logo and navbar -->
-    </header>
+<head>
+  <meta charset='utf-8'>
+  <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+  <title>Page Title</title>
+  <meta name='viewport' content='width=device-width, initial-scale=1'>
+  <link rel='stylesheet' type='text/css' media='screen' href='style.css'>
+</head>
+<body>
+  <div class="header-container">
+    <div class="left-header"><h1>LOGO</h1>
+    </div>
 
-    <section class="big-news">
-      <!-- The big news content -->
-    </section>
+    <div class="right-header">
+      <ul class="header-links">
+        <li>Home</li>
+        <li>Contact</li>
+        <li>About</li>
+        <li>Service</li>
+      </ul>
+      
+    </div>
+  </div>
+  <div class="main-news">
+    <div class="left-main">
+      <h1>bild</h1>
+    </div>
+    <div class="right-main">
+      <h1>text</h1>
+    </div>
+  </div>
 
-    <section class="">
-      <!-- The other news  -->
-    </section>
-  </body>
+  <div class="small-news">
+    <div class="small-box">box</div>
+    <div class="small-box">box</div>
+    <div class="small-box">box</div>
+    <div class="small-box">box</div>
+    <div class="small-box">box</div>
+    <div class="small-box">box</div>
+    <div class="small-box">box</div>
+    <div class="small-box">box</div>
+  </div>
+
+</body>
 </html>
